--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -12,6 +12,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	    <servlet-name>OccupancySensorGui</servlet-name>
 	    <servlet-class>sensorhandler.OccupancySensorGui</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>TestPost</servlet-name>
+	    <servlet-class>sensorhandler.TestPost</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>OccupancySensorServlet</servlet-name>
 		<url-pattern>/occupancysensorservlet</url-pattern>
@@ -19,6 +23,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 	    <servlet-name>OccupancySensorGui</servlet-name>
 	    <url-pattern>/occupancysensorgui</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+	    <servlet-name>TestPost</servlet-name>
+	    <url-pattern>/testpost</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
